<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/redeemName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_point_required"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/redeemPointRequire"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_availability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/redeemAvailability"
        android:textSize="18sp" />
</LinearLayout>