<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvitemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemTitle"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            tools:textStyle="bold" />

        <ListView
            android:id="@+id/lvItemList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.72"
            android:divider="@android:drawable/bottom_bar"
            android:dividerHeight="1dp"
            android:scrollbars="horizontal|vertical" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08" />

        <TextView
            android:id="@+id/tvSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectLabel"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/etTitle" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnOK" />

    </LinearLayout>
</FrameLayout>